# Midi-Transposer

./: .gitignore  CMakeLists.txt  LICENSE  MidiBassPedalChords.jucer  MidiTransposer.jucer  ProjectInfo.h.in  README.md  Utils.cmake  conf.json
Source/: CMakeLists.txt  MidiProcessor.cpp  MidiProcessor.h  ParameterList.h  Params.cpp  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Settings.h
Source/GUI/: BarSliderLookAndFeel.h  BaseLookAndFeel.cpp  BaseLookAndFeel.h  Helpers.h  IntervalsPanel.cpp  IntervalsPanel.h  KeysPanel.cpp  KeysPanel.h  MainPanel.cpp  MainPanel.h  NoteKey.cpp  NoteKey.h  NoteMappingToggle.cpp  NoteMappingToggle.h  Panels.h  PresetsPanel.cpp  PresetsPanel.h  SettingsPanel.cpp  SettingsPanel.h  SidePanel.cpp  SidePanel.h
Source/Layout/: HeaderPanel.cpp  Helpers.h  IntervalsPanel.cpp  KeysPanel.cpp  MidiPanel.h  NoteKey.cpp  NoteMappingToggle.cpp  NotesPanel.h  Panels.h  PresetsPanel.cpp
Source/Params/: ArpeggiatorParams.cpp  IntervalParam.cpp  MidiParams.cpp  NoteParam.cpp  NoteParams.cpp  Params.h
Source/PresetBrowser/: PresetManager.cpp  PresetManager.h
data/config/: colors.json  positions.json
src/: CMakeLists.txt  MidiProcessor.cpp  PluginEditor.cpp  PluginEditor.h  UISettings.h
src/GUI/: BarSliderLookAndFeel.h  BaseLookAndFeel.cpp  BaseLookAndFeel.h  Helpers.h  IntervalsPanel.cpp  IntervalsPanel.h  KeysPanel.cpp  KeysPanel.h  MainPanel.h  NoteKey.cpp  NoteMappingToggle.cpp  NoteMappingToggle.h  PresetsPanel.h  SettingsPanel.h
src/Params/: ArpeggiatorParams.cpp  NoteParam.cpp
src/PresetBrowser/: PresetManager.cpp
src/gui/: CompColors.h  CompCoordinates.h  Configuration.cpp  Configuration.h  Configuration.hpp  PluginEditor.cpp  PluginEditor.h  UISettings.h
src/gui/lookandfeel/: BarSliderLookAndFeel.h  BaseLookAndFeel.cpp  BaseLookAndFeel.h
src/gui/panels/: ArpPanel.cpp  ArpPanel.h  IntervalsPanel.cpp  IntervalsPanel.h  KeysPanel.cpp  KeysPanel.h  MainPanel.cpp  MainPanel.h  MidiPanel.cpp  MidiPanel.h  PresetsPanel.cpp  PresetsPanel.h  SettingsPanel.cpp  SettingsPanel.h
src/gui/widgets/: CustomSlider.cpp  CustomSlider.h  CustomToggleButton.cpp  CustomToggleButton.h  Helpers.h  IndexedToggleButton.cpp  IndexedToggleButton.h  NoteKey.cpp  NoteKey.h  NoteMappingToggle.cpp  NoteMappingToggle.h  TextSwitch.cpp  TextSwitch.h
src/params/: ArpeggiatorParams.cpp  IntervalParam.cpp  MidiParams.cpp  NoteParam.cpp  NoteParams.cpp  Params.h
src/presets/: PresetManager.cpp  PresetManager.h
src/processor/: MidiProcessor.cpp  MidiProcessor.h  PluginProcessor.cpp  PluginProcessor.h
